Add Pet Rehab and Fix Story

--- a/pet-place/ko.lproj/Localizable.strings
+++ b/pet-place/ko.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "Pet Kindergarden" = "펫 유치원";
 "Pet Playground" = "펫 놀이방";
 "Pet Training" = "펫 훈련소";
+"Pet Rehab" = "펫 재활";
 
 "Choose Gender" = "성별 선택";
 "Pet name" = "펫 이름";
